tests/baselines/reference/declFileExportAssignmentOfGenericInterface.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
declFileExportAssignmentOfGenericInterface_1.ts(3,1): error TS2454: Variable 'x' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== declFileExportAssignmentOfGenericInterface_1.ts (1 errors) ====
    import a = require('declFileExportAssignmentOfGenericInterface_0');
    export var x: a<a<string>>;
    x.a;
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
==== declFileExportAssignmentOfGenericInterface_0.ts (0 errors) ====
    interface Foo<T> {
        a: string;
    }
    export = Foo;
    